Call jlink when building main code space